Исправления HealthBar и PlayerHealth 5

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Ethan the Hero\Script\PlayerMovement\PlayerMovementData.cs" />
     <Compile Include="Assets\Scripts\StateMashine\Enemy.cs" />
-    <Compile Include="Assets\Scripts\StateMashine\State.cs" />
+    <Compile Include="Assets\Scripts\StateMashine\State_.cs" />
     <Compile Include="Assets\Ethan the Hero\Script\PlayerAnimation.cs" />
     <Compile Include="Assets\Ethan the Hero\Script\PlayerMovement\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Counter.cs" />
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\Cat.cs" />
     <Compile Include="Assets\Scripts\Coin.cs" />
     <Compile Include="Assets\Scripts\StateMashine\EnemyStateMashine.cs" />
+    <Compile Include="Assets\Scripts\ScriptableObject\State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
